tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@unknown_tag.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/unknown_tag.txt
---
error: Unknown tag
 --> unknown_tag.txt:1:5
  |
1 | i.{%a.
  |     ^
